--- a/index.html
+++ b/index.html
@@ -37,7 +37,18 @@
     </style>
 </head>
 <body>
-    <div class="min-h-screen">
+   <h2>Chapitres disponibles</h2>
+<ul>
+  <li><a href="chapitre1.html">Chapitre 1 : La Dérivation</a></li>
+  <li><a href="chapitre2.html">Chapitre 2 : Les Fonctions</a></li>
+  <li><a href="chapitre3.html">Chapitre 3 : Les Suites Numériques</a></li>
+  <li><a href="chapitre4.html">Chapitre 4 : Statistiques</a></li>
+  <li><a href="chapitre5.html">Chapitre 5 : Probabilités</a></li>
+  <li><a href="chapitre6.html">Chapitre 6 : Géométrie Analytique</a></li>
+  <li><a href="chapitre7.html">Chapitre 7 : Trigonométrie</a></li>
+  <li><a href="chapitre8.html">Chapitre 8 : Produit Scalaire</a></li>
+</ul>
+ <div class="min-h-screen">
         <!-- Header -->
         <header class="bg-gradient-to-r from-green-600 to-yellow-500 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6 flex flex-col md:flex-row justify-between items-center">
